# CG1---Raytacing

./: .gitignore
Excercise0/: Makefile  Triangle.h  Vec3f.h  main.cpp
Excercise1/: main.cpp
Excercise1/microTrace/: .cproject  .project  Makefile
Excercise1/microTrace/include/: Ray.h  Renderer.h  Scene.h  Vec3f.h
Excercise1/microTrace/src/: Image.cpp  MicroTrace01.cpp
Excercise2/microTrace02/: Makefile
Excercise2/microTrace02/include/: Image.h  Scene.h  Vec3f.h
Excercise2/microTrace02/src/: MicroTrace02.cpp
Excercise2_5/microTrace02_05_v2/include/: Ray.h  Scene.h  Vec3f.h
Excercise2_5/microTrace02_05_v2/src/: MicroTrace02.cpp
Excercise3/microTrace03/: Makefile
Excercise4/microTrace04/: Makefile
Excercise5/microTrace05/: Makefile
Excercise6/microTrace06/: Makefile
RenderingCompetition/: CMakeLists.txt  Makefile  result1391363999749.ppm
RenderingCompetition/include/: AABB.h  Acceleration.h  Camera.h  Common.h  Image.h  Light.h  Material.h  Object.h  PhotonMap.h  Random.h  Ray.h  Renderer.h  Sampling.h  Scene.h  SpectralDistribution.h  Texture.h  Tracer.h  cie.h  model_obj.h
RenderingCompetition/include/Lights/: IsotropicLight.h  QuadLight.h
RenderingCompetition/include/Materials/: Diffuse.h
RenderingCompetition/include/Objects/: Plane.h  Sphere.h  Triangle.h  TriangleMesh.h
RenderingCompetition/results/: result1391373639477.ppm  result1391380772792.ppm  result1391392785310.ppm
RenderingCompetition/src/: Camera.cpp  Image.cpp  Object.cpp  PhotonMap.cpp  Tracer.cpp  cie.cpp  main.cpp  model_obj.cpp
(+131 files in other folders)
